2014-10-28 03:08-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* English.lproj/Gorm.gorm: Change connection to point to
	new selectAll:
	* GormCore/GormWrapperLoader.m: Fix for bug #42782
	* Gorm.m: Add select all method.

2014-08-31 Fred Kiefer <FredKiefer@gmx.de>

	* GormCore/GormDocument.m: Rewrite fix for bug #39072 to stop
	leaking memory.

2014-07-21 Fred Kiefer <FredKiefer@gmx.de>

	* GormCore/GormImage.m: Fix the init issue for the second
	method as well. Small cleanup.

2014-05-31 10:58-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormDocumentController.h: add declaration of
	openDocumentForContentsOfURL:
	* GormCore/GormDocumentController.m: add implementation of
	openDocumentForContentsOfURL:
	* GormCore/GormDocument.m: Add implementation of revertContentsOfURL:..
	Fix bug#28644

2014-05-30 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Palettes/2Controls/GormColorWellAttributesInspector.h
	  fix typo in header guard
	* Palettes/2Controls/GormFormAttributesInspector.m
	  fix some format string warnings

2014-05-28 Riccardo Mottola <rm@gnu.org>

	* GormCore/GormClassInspector.m
	* GormCore/GormClassManager.m
	* GormCore/GormFilePrefsManager.m
	* GormCore/GormInspectorsManager.m
	Explicitely cast NSIntegers to avoid warning and problems.

2014-05-27 03:26-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormInspectorsManager.m
	* Palettes/2Controls/GormMatrixAttributesInspector.h
	* Palettes/2Controls/GormMatrixAttributesInspector.m
	* Palettes/2Controls/GormNSMatrixInspector.gorm: Fix for bug #28646.

2014-05-27 03:15-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormDocument.m: Fix bug #39072: add retain to prevent
	segmentation fault when renaming object in document view.

2014-05-26 19:25-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormObjCHeaderParser/OCIVarDecl.m
	* GormObjCHeaderParser/OCIVar.m: Fix for bug#30837.
