@@ -1,3 +1,15 @@
+2015-02-22 21:21-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* English.lproj/GormPreferences.gorm: Removed from pulldown menu
+	* English.lproj/GormPrefGuideline.gorm: Added colorwell and
+	connections.
+	* GormPrefs/GNUmakefile: Removed classes.
+	* GormPrefs/GormColorsPref.h
+	* GormPrefs/GormColorsPref.m: Removed.
+	* GormPrefs/GormGuidelinePref.h
+	* GormPrefs/GormGuidelinePref.m: Added color well...
+	* GormPrefs/GormPrefController.m: Removed view from case statement
+
 2014-10-28 03:08-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* English.lproj/Gorm.gorm: Change connection to point to
